layout issues

--- a/src/global.scss
+++ b/src/global.scss
@@ -34,3 +34,13 @@ ion-content {
   display: flex;
   justify-content: space-between;
 }
+.container {
+  max-width: 720px;
+  margin: 0 auto;
+  position: relative;
+}
+.large-only {
+  @media only screen and (max-width : 500px) {
+    display: none;
+  }
+}
